--- a/content/reference/datatypes.adoc
+++ b/content/reference/datatypes.adoc
@@ -118,7 +118,8 @@ Example:
 (import [java.lang.annotation Retention RetentionPolicy Target ElementType]
         [javax.xml.ws WebServiceRef WebServiceRefs])
 
-(definterface Foo (foo []))
+(definterface Foo (foo []
+                   bar [a]))
 
 ;annotation on type
 (deftype ^{Deprecated true
@@ -144,7 +145,8 @@ Example:
           javax.xml.ws.soap.Addressing {:enabled false :required true}
           WebServiceRefs [(WebServiceRef {:name "fred" :type String})
                           (WebServiceRef {:name "ethel" :mappedName "lucy"})]}
-       foo [this] 42))
+       foo [this] 42)
+       bar [this #^{MyAnnotations {:name "thisiscalleda"}} a] (+ 42 a))
 
 (seq (.getAnnotations Bar))
 (seq (.getAnnotations (.getField Bar "b")))
