--- a/content/events/2016/clojutre.adoc
+++ b/content/events/2016/clojutre.adoc
@@ -8,5 +8,5 @@ clojuTRE
 :jbake-start: 2016-09-10
 :jbake-end: 2016-09-10
 
-clojuTRE is a free Clojure conference organized by [Metosin](http://www.metosin.fi/). The event has single track, late start, short talks (20 minutes and 5 minutes Q&A) and a funky after party for networking, discussions and draft beer. We welcome both newbies and seasoned Clojurists.
+clojuTRE is a free Clojure conference organized by http://www.metosin.fi/[Metosin]. The event has single track, late start, short talks (20 minutes and 5 minutes Q&A) and a funky after party for networking, discussions and draft beer. We welcome both newbies and seasoned Clojurists.
 
