--- a/content/guides/comparators.adoc
+++ b/content/guides/comparators.adoc
@@ -175,10 +175,10 @@ as above, the field :salary is sorted in descending order because _x_ and _y_ ar
              [(:salary x) (:name y) (:company y)]))
 
 user> (pprint (sort by-salary-name-co2 people))
-({:name "John", :salary 35000.0, :company "Acme"}
- {:name "John", :salary 40000.0, :company "Venus Co"}
- {:name "John", :salary 30000.0, :company "Asteroids-R-Us"}
- {:name "Mary", :salary 35000.0, :company "Mars Inc"})
+({:name "John", :salary 40000.0, :company "Venus Co"}
+ {:name "John", :salary 35000.0, :company "Acme"}
+ {:name "Mary", :salary 35000.0, :company "Mars Inc"}
+ {:name "John", :salary 30000.0, :company "Asteroids-R-Us"})
 ----
 
 The above is fine for key values that are inexpensive to compute from the values being sorted.
