add spec rationale page

--- a/content/about/dynamic.adoc
+++ b/content/about/dynamic.adoc
@@ -4,8 +4,8 @@ Rich Hickey
 :type: about
 :toc: macro
 :icons: font
-:prevpagehref: state
-:prevpagetitle: State
+:prevpagehref: spec
+:prevpagetitle: spec
 :nextpagehref: functional_programming
 :nextpagetitle: Functional Programming
 
