--- a/content/about/state.adoc
+++ b/content/about/state.adoc
@@ -7,8 +7,8 @@ Rich Hickey
 :navlinktext: State
 :prevpagehref: rationale
 :prevpagetitle: Rationale
-:nextpagehref: dynamic
-:nextpagetitle: Dynamic Development
+:nextpagehref: spec
+:nextpagetitle: spec
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
